--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lint:js": "flow check && eslint ./src",
         "lint:scss": "sass-lint -v -q",
         "lint:json": "jsonlint ./src/languages/*.json -q",
+        "test": "jest",
         "build:js:transpile": "cross-env NODE_ENV=transpile rollup -c",
         "build:js:transpile-legacy": "cross-env NODE_ENV=transpile-legacy rollup -c",
         "build:js:minify": "cross-env NODE_ENV=minify babel ./dist/codecolor.js -o ./dist/codecolor.min.js",
@@ -39,7 +40,9 @@
         "@babel/core": "^7.0.0",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-flow": "^7.0.0",
+        "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "8",
+        "babel-jest": "^23.6.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-minify": "^0.5.0",
         "cpx": "^1.5.0",
@@ -49,9 +52,11 @@
         "eslint-plugin-flowtype": "^2.50.0",
         "eslint-plugin-import": "^2.14.0",
         "flow-bin": "^0.77.0",
+        "jest": "^23.6.0",
         "jsonlint": "^1.6.3",
         "node-sass": "^4.9.3",
         "npm-run-all": "^4.1.3",
+        "regenerator-runtime": "^0.13.1",
         "rimraf": "^2.6.2",
         "rollup": "^0.64.1",
         "rollup-plugin-babel": "^4.0.3",
