--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "scripts": {
         "clean": "rimraf ./dist/*",
         "lint:js": "flow check && eslint ./src",
+        "lint:test": "eslint ./test",
         "lint:scss": "sass-lint -v -q",
         "lint:json": "jsonlint ./src/languages/*.json -q",
         "test": "jest",
@@ -47,10 +48,11 @@
         "babel-preset-minify": "^0.5.0",
         "cpx": "^1.5.0",
         "cross-env": "^5.2.0",
-        "eslint": "^5.3.0",
+        "eslint": "^5.10.0",
         "eslint-config-airbnb-base": "^13.0.0",
         "eslint-plugin-flowtype": "^2.50.0",
         "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jest": "^22.1.2",
         "flow-bin": "^0.77.0",
         "jest": "^23.6.0",
         "jsonlint": "^1.6.3",
