--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "clean": "rimraf ./dist/*",
         "lint:js": "flow check && eslint ./src",
         "lint:test": "eslint ./test",
+        "lint:bench": "eslint ./bench",
         "lint:scss": "sass-lint -v -q",
         "lint:json": "jsonlint ./src/languages/*.json -q",
         "test": "jest",
@@ -31,7 +32,8 @@
         "build:js": "npm-run-all build:js:* && node ./build/banner.js",
         "build:scss": "node-sass --output-style compressed --linefeed lf ./src/styles/themes/ -o ./dist/themes",
         "build:json": "cpx ./src/languages/**/*.json ./dist/languages",
-        "build": "npm-run-all clean lint:* build:*"
+        "build": "npm-run-all clean lint:* test build:*",
+        "bench": "node ./bench/highlight.bench.js"
     },
     "engines": {
         "node": "*"
@@ -46,6 +48,8 @@
         "babel-jest": "^23.6.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-minify": "^0.5.0",
+        "benchmark": "^2.1.4",
+        "colors": "^1.3.3",
         "cpx": "^1.5.0",
         "cross-env": "^5.2.0",
         "eslint": "^5.10.0",
@@ -54,10 +58,12 @@
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jest": "^22.1.2",
         "flow-bin": "^0.77.0",
+        "highlight.js": "^9.13.1",
         "jest": "^23.6.0",
         "jsonlint": "^1.6.3",
         "node-sass": "^4.9.3",
         "npm-run-all": "^4.1.3",
+        "prismjs": "^1.15.0",
         "regenerator-runtime": "^0.13.1",
         "rimraf": "^2.6.2",
         "rollup": "^0.64.1",
