--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "build:js": "npm-run-all build:js:* && node ./build/banner.js",
         "build:scss": "node-sass --output-style compressed --linefeed lf ./src/styles/themes/ -o ./dist/themes",
         "build:json": "cpx ./src/languages/**/*.json ./dist/languages",
+        "build:prettier": "prettier --write ./dist/{codecolor,codecolor.legacy}.js",
         "build": "npm-run-all clean lint:* test build:*",
         "bench": "node ./bench/highlight.bench.js"
     },
@@ -63,6 +64,7 @@
         "jsonlint": "^1.6.3",
         "node-sass": "^4.9.3",
         "npm-run-all": "^4.1.3",
+        "prettier": "1.15.3",
         "prismjs": "^1.15.0",
         "regenerator-runtime": "^0.13.1",
         "rimraf": "^2.6.2",
