--- a/.babelrc
+++ b/.babelrc
@@ -28,6 +28,6 @@
         }
     },
     "plugins": [
-        ["transform-class-properties", { "spec": true }]
+        ["@babel/plugin-proposal-class-properties", { "loose": true }]
     ]
 }
