--- a/package.json
+++ b/package.json
@@ -44,10 +44,9 @@
         "@babel/core": "^7.2.2",
         "@babel/preset-env": "^7.3.1",
         "@babel/preset-flow": "^7.0.0",
-        "babel-core": "^7.0.0-bridge.0",
+        "@babel/plugin-proposal-class-properties": "^7.3.0",
         "babel-eslint": "10.0.1",
-        "babel-jest": "^23.6.0",
-        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-jest": "^24.1.0",
         "babel-preset-minify": "^0.5.0",
         "benchmark": "^2.1.4",
         "colors": "^1.3.3",
@@ -60,7 +59,7 @@
         "eslint-plugin-jest": "^22.1.3",
         "flow-bin": "^0.91.0",
         "highlight.js": "^9.13.1",
-        "jest": "^23.6.0",
+        "jest": "^24.1.0",
         "jsonlint": "^1.6.3",
         "node-sass": "^4.11.0",
         "npm-run-all": "^4.1.5",
