--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
         "highlight",
         "syntax"
     ],
+    "url": "https://codecolorjs.pw/",
     "homepage": "https://codecolorjs.pw/",
+    "main": "dist/codecolor.js",
+    "unpkg": "dist/codecolor.min.js",
+    "jsdelivr": "dist/codecolor.min.js",
+    "browser": "dist/codecolor.js",
+    "module": "dist/codecolor.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/keindev/codecolor.js.git"
@@ -16,27 +22,25 @@
     "bugs": {
         "url": "https://github.com/keindev/codecolor.js/issues"
     },
-    "main": "./dist/codecolor.min.js",
     "scripts": {
-        "clean": "rimraf ./dist/*",
+        "clean": "rm -rf ./dist",
         "lint:js": "flow check && eslint ./src",
         "lint:test": "eslint ./test",
         "lint:bench": "eslint ./bench",
         "lint:scss": "sass-lint -v -q",
         "test": "jest",
+        "prebuild:flow-typed": "flow-typed install jest --ignoreDeps",
         "build:js:transpile": "cross-env NODE_ENV=transpile rollup -c",
         "build:js:transpile-legacy": "cross-env NODE_ENV=transpile-legacy rollup -c",
         "build:js:minify": "cross-env NODE_ENV=minify babel ./dist/codecolor.js -o ./dist/codecolor.min.js",
         "build:js:minify-legacy": "cross-env NODE_ENV=minify babel ./dist/codecolor.legacy.js -o ./dist/codecolor.legacy.min.js",
-        "build:js": "npm-run-all build:js:* && node ./build/banner.js",
+        "build:js": "npm-run-all build:js:* && node build/banner.js",
         "build:scss": "node-sass --output-style compressed --linefeed lf ./src/styles/themes/ -o ./dist/themes",
-        "build:json": "cpx ./src/languages/**/*.json ./dist/languages",
+        "build:json": "mkdir -p ./dist/languages && cp -t ./dist/languages ./src/languages/*.json",
         "build:prettier": "prettier --write ./dist/{codecolor,codecolor.legacy}.js",
-        "build": "npm-run-all clean lint:* test build:*",
-        "bench": "node ./bench/highlight.bench.js"
-    },
-    "engines": {
-        "node": "*"
+        "zip": "cp -t ./dist ./LICENSE ./README.md ./CHANGELOG.md && cd ./dist && zip codecolor.js.zip -- ./themes/*.css ./languages/*.json ./*.js ./LICENSE ./README.md ./CHANGELOG.md",
+        "build": "npm-run-all clean prebuild:* lint:* test build:* zip",
+        "bench": "node bench/highlight.bench.js"
     },
     "devDependencies": {
         "@babel/cli": "^7.2.3",
@@ -49,7 +53,6 @@
         "babel-preset-minify": "^0.5.0",
         "benchmark": "^2.1.4",
         "colors": "^1.3.3",
-        "cpx": "^1.5.0",
         "cross-env": "^5.2.0",
         "eslint": "^5.12.1",
         "eslint-config-airbnb-base": "^13.1.0",
@@ -64,7 +67,6 @@
         "prettier": "1.16.1",
         "prismjs": "^1.15.0",
         "regenerator-runtime": "^0.13.1",
-        "rimraf": "^2.6.3",
         "rollup": "^1.1.2",
         "rollup-plugin-babel": "^4.3.2",
         "rollup-plugin-json": "^3.1.0",
