--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 end_of_line = lf
 max_line_length  = 120
+indent_style = space
+indent_size = 4
 
 [*.{js}]
 indent_style = space
