--- a/package.json
+++ b/package.json
@@ -1,75 +1,69 @@
 {
-    "name": "Codecolor.js",
-    "version": "1.0.0",
-    "description": "CodeColor is just a syntax highlighter writen in JavaScript.",
-    "license": "MIT",
-    "author": "Daniil Ryazanov <opensource@tagproject.ru>",
-    "keywords": [
-        "highlight",
-        "syntax"
-    ],
-    "url": "https://codecolorjs.pw/",
-    "homepage": "https://codecolorjs.pw/",
-    "main": "dist/codecolor.js",
-    "unpkg": "dist/codecolor.min.js",
-    "jsdelivr": "dist/codecolor.min.js",
-    "browser": "dist/codecolor.js",
-    "module": "dist/codecolor.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/keindev/codecolor.js.git"
-    },
-    "bugs": {
-        "url": "https://github.com/keindev/codecolor.js/issues"
-    },
-    "scripts": {
-        "clean": "rm -rf ./dist",
-        "lint:js": "flow check && eslint ./src",
-        "lint:test": "eslint ./test",
-        "lint:bench": "eslint ./bench",
-        "lint:scss": "sass-lint -v -q",
-        "test": "jest",
-        "prebuild:flow-typed": "flow-typed install jest --ignoreDeps",
-        "build:js:transpile": "cross-env NODE_ENV=transpile rollup -c",
-        "build:js:transpile-legacy": "cross-env NODE_ENV=transpile-legacy rollup -c",
-        "build:js:minify": "cross-env NODE_ENV=minify babel ./dist/codecolor.js -o ./dist/codecolor.min.js",
-        "build:js:minify-legacy": "cross-env NODE_ENV=minify babel ./dist/codecolor.legacy.js -o ./dist/codecolor.legacy.min.js",
-        "build:js": "npm-run-all build:js:* && node build/banner.js",
-        "build:scss": "node-sass --output-style compressed --linefeed lf ./src/styles/themes/ -o ./dist/themes",
-        "build:json": "mkdir -p ./dist/languages && cp -t ./dist/languages ./src/languages/*.json",
-        "build:prettier": "prettier --write ./dist/{codecolor,codecolor.legacy}.js",
-        "zip": "cp -t ./dist ./LICENSE ./README.md ./CHANGELOG.md && cd ./dist && zip codecolor.js.zip -- ./themes/*.css ./languages/*.json ./*.js ./LICENSE ./README.md ./CHANGELOG.md",
-        "build": "npm-run-all clean prebuild:* lint:* test build:* zip",
-        "bench": "node bench/highlight.bench.js"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.5.5",
-        "@babel/core": "^7.5.4",
-        "@babel/preset-env": "^7.5.5",
-        "@babel/preset-flow": "^7.0.0",
-        "@babel/plugin-proposal-class-properties": "^7.5.0",
-        "babel-eslint": "10.0.3",
-        "babel-jest": "^24.8.0",
-        "babel-preset-minify": "^0.5.0",
-        "benchmark": "^2.1.4",
-        "colors": "^1.3.3",
-        "cross-env": "^5.2.1",
-        "eslint": "^5.12.1",
-        "eslint-config-airbnb-base": "^13.2.0",
-        "eslint-plugin-flowtype": "^3.13.0",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^22.16.0",
-        "flow-bin": "^0.106.3",
-        "highlight.js": "^9.15.10",
-        "jest": "^24.9.0",
-        "node-sass": "^4.12.0",
-        "npm-run-all": "^4.1.5",
-        "prettier": "1.18.2",
-        "prismjs": "^1.17.1",
-        "regenerator-runtime": "^0.13.3",
-        "rollup": "^1.20.3",
-        "rollup-plugin-babel": "^4.3.2",
-        "rollup-plugin-json": "^4.0.0",
-        "sass-lint": "^1.13.1"
-    }
+  "name": "codecolor.js",
+  "version": "1.0.0",
+  "description": "CodeColor is just a fast syntax highlighter",
+  "license": "MIT",
+  "homepage": "https://github.com/keindev/codecolor.js#readme",
+  "author": {
+    "name": "Daniil Ryazanov",
+    "email": "kein@tagproject.ru"
+  },
+  "keywords": [
+    "highlight",
+    "syntax"
+  ],
+  "bugs": "https://github.com/keindev/codecolor.js/issues",
+  "types": "./lib/index.d.ts",
+  "type": "module",
+  "exports": "./lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/keindev/codecolor.js.git"
+  },
+  "scripts": {
+    "build": "npm-run-all build:*",
+    "build:ts": "rimraf lib && tsc --extendedDiagnostics",
+    "generate": "npm-run-all generate:*",
+    "generate:changelog": "node --experimental-specifier-resolution=node node_modules/.bin/changelog generate --bump",
+    "generate:ghinfo": "node --experimental-specifier-resolution=node node_modules/.bin/ghinfo generate -d media -t utils",
+    "generate:media": "node --experimental-specifier-resolution=node node_modules/.bin/figma-portal extract -d media -p GitHub",
+    "lint": "npm-run-all lint:*",
+    "lint:eslint": "rimraf coverage && eslint \"src/**\" --ext .ts",
+    "lint:spell": "cspell -c .vscode/cspell.json --no-summary \"**/*.{js,ts,tsx,md,yml,json}\"",
+    "prepare": "npm-run-all prepare:*",
+    "prepare:config": "node --experimental-specifier-resolution=node node_modules/.bin/ts-package-shared-config",
+    "prepare:docs": "node --experimental-specifier-resolution=node node_modules/.bin/docs-shared-config",
+    "prepare:husky": "husky install",
+    "prepare:vscode": "node --experimental-specifier-resolution=node node_modules/.bin/vscode-shared-config",
+    "release": "npm-run-all prepare lint test build generate",
+    "test": "npm-run-all test:*",
+    "test:jest": "node --experimental-vm-modules node_modules/.bin/jest"
+  },
+  "devDependencies": {
+    "@tagproject/docs-shared-config": "^1.0.2",
+    "@tagproject/ts-package-shared-config": "^7.3.0",
+    "@tagproject/vscode-shared-config": "^1.2.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.22",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "changelog-guru": "^4.0.4",
+    "cspell": "^5.19.2",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "figma-portal": "^1.0.0",
+    "ghinfo": "^3.0.4",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.6.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2"
+  }
 }
