--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "generate:ghinfo": "node --experimental-specifier-resolution=node node_modules/.bin/ghinfo generate -d media -t utils",
     "generate:media": "node --experimental-specifier-resolution=node node_modules/.bin/figma-portal extract -d media -p GitHub",
     "lint": "npm-run-all lint:*",
-    "lint:eslint": "rimraf coverage && eslint \"src/**\" --ext .ts",
+    "lint:eslint": "rimraf coverage && eslint src --ext .ts",
     "lint:spell": "cspell -c .vscode/cspell.json --no-summary \"**/*.{js,ts,tsx,md,yml,json}\"",
     "prepare": "npm-run-all prepare:*",
     "prepare:config": "node --experimental-specifier-resolution=node node_modules/.bin/ts-package-shared-config",
@@ -49,8 +49,8 @@
   },
   "devDependencies": {
     "@tagproject/docs-shared-config": "^1.0.2",
-    "@tagproject/ts-package-shared-config": "^7.3.0",
-    "@tagproject/vscode-shared-config": "^1.2.3",
+    "@tagproject/ts-package-shared-config": "^7.3.1",
+    "@tagproject/vscode-shared-config": "^1.2.4",
     "@types/benchmark": "^2.1.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
