--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node": "^14.13.1 || >=16.0.0"
   },
   "scripts": {
-    "benchmark": "node --experimental-specifier-resolution=node --loader ts-node/esm src/__tests__/__benchmark__/benchmark.ts",
+    "benchmark": "node --loader ts-node/esm src/__tests__/__benchmark__/benchmark.ts",
     "build": "npm-run-all build:*",
     "build:scss": "sass src/styles/themes:lib/themes",
     "build:ts": "rimraf lib && tsc --extendedDiagnostics",
@@ -50,32 +50,32 @@
   },
   "devDependencies": {
     "@tagproject/docs-shared-config": "^1.1.2",
-    "@tagproject/ts-package-shared-config": "^10.0.2",
+    "@tagproject/ts-package-shared-config": "^10.0.3",
     "@tagproject/vscode-shared-config": "^2.0.5",
     "@types/benchmark": "^2.1.2",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
     "@types/prismjs": "^1.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "benchmark": "^2.1.4",
     "changelog-guru": "^4.0.9",
     "colors": "^1.4.0",
-    "cspell": "^6.14.3",
-    "eslint": "^8.28.0",
+    "cspell": "^6.17.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "ghinfo": "^3.0.8",
-    "highlight.js": "^11.6.0",
+    "highlight.js": "^11.7.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "microtime": "^3.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "prismjs": "^1.29.0",
     "rimraf": "^3.0.2",
     "sass": "^1.56.1",
