--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "codecolor.js",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "fast, small and simple syntax highlighter library",
   "license": "MIT",
   "homepage": "https://github.com/keindev/codecolor.js#readme",
-  "author": "Daniil Ryazanov <kein@tagproject.ru>",
+  "author": {
+    "name": "Daniil Ryazanov",
+    "email": "kein@tagproject.ru"
+  },
   "keywords": [
     "highlight",
     "syntax",
